# haskell-connect-four

./: CHANGELOG.md  README.md  haskell-emurgo-project.cabal
app/: Main.hs
