cabal-version:      2.4
name:               haskell-emurgo-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Zakhar Deyneka
maintainer:         95752742+zakhard90@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-emurgo-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
       base ^>=4.14.3.0,
       gloss ^>=1.13,
       random >=1.1 && <1.2
    hs-source-dirs:   app
    default-language: Haskell2010
